# bluerov_sim_thesis

./: CMakeLists.txt  package.xml
action/: Waypoint.action
include/: gazebo_range_sensor_plugin.h
launch/: alt_hold.launch  assignment_3.launch  gazebo_base.launch  keyboard_control.launch  spawn_tank.launch  spawn_vehicle.launch  test.launch
models/apriltag_tank/: model.sdf
models/uuv_bluerov2_heavy/: uuv_bluerov2_heavy.sdf
models/uuv_bluerov2_heavy_cam/: uuv_bluerov2_heavy_cam.sdf
nodes/: LawnMow.py  WayPoint_server.py  altitude_hold.py  auto_arm_node.py  external_localization.py  keyboard_control.py  tank_generator_node.py
plugins/: gazebo_pressure_plugin.cpp  gazebo_range_sensor_plugin.cpp
worlds/: base.world
